--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <section>
-  <svg class="logo" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
-    <rect class="cls-1" width="50" height="50" fill="#ff7000"></rect>
-  </svg>
+    <svg class="logo" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <rect class="cls-1" width="200" height="200"></rect>
+    </svg>
 </section>
